[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Assets/font_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/bebas.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/UISfx.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.878431 )

[sub_resource type="DynamicFont" id=2]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Wrapper" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PauseMenu" type="Panel" parent="Wrapper"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = -144.0
margin_right = 223.0
margin_bottom = 144.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Wrapper/PauseMenu"]
margin_left = -2.0
margin_top = 17.0
margin_right = 350.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.772549, 0, 1 )
text = "PAUSED"
align = 1

[node name="Resume" type="Button" parent="Wrapper/PauseMenu"]
margin_left = -1.0
margin_top = 95.0
margin_right = 351.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 1, 0.654902, 0, 1 )
text = "RESUME     [esc]"
flat = true

[node name="Restart" type="Button" parent="Wrapper/PauseMenu"]
margin_left = -3.0
margin_top = 150.0
margin_right = 349.0
margin_bottom = 202.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 1, 0.654902, 0, 1 )
text = "RESTART   LEVEL     [R]"
flat = true

[node name="Quit" type="Button" parent="Wrapper/PauseMenu"]
margin_left = 2.0
margin_top = 205.0
margin_right = 354.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 1, 0.654902, 0, 1 )
text = "QUIT"
flat = true

[node name="Sfx" parent="." instance=ExtResource( 4 )]

[connection signal="mouse_entered" from="Wrapper/PauseMenu/Resume" to="." method="_on_Resume_mouse_entered"]
[connection signal="pressed" from="Wrapper/PauseMenu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="mouse_entered" from="Wrapper/PauseMenu/Restart" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Wrapper/PauseMenu/Restart" to="." method="_on_Restart_pressed"]
[connection signal="mouse_entered" from="Wrapper/PauseMenu/Quit" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Wrapper/PauseMenu/Quit" to="." method="_on_Quit_pressed"]
